fixed link to user profile from post index.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Posted Treasures</h1>
 
 <% @posts.each do |post| %>
-    <%= link_to post.user.username, user_post_path(post.user, post) %>
+    <%= link_to post.user.username, user_path(post.user) %>
     <% if post.text? %>
         <%= post.text %>
     <% end %>
