--- a/app/views/dm_friends/index.html.erb
+++ b/app/views/dm_friends/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Friends list:</h1>
-<h2>Click friend name to dm</h2>
+<h2>Click friend name to DM</h2>
 
 <% @dm_friends.each do |friend| %>
-    <%= link_to friend.username, new_direct_message_path %><br>
+    <%= link_to friend.username, dm_friend_direct_messages_path(friend) %><br>
 <% end %>
