--- a/app/views/direct_messages/new.html.erb
+++ b/app/views/direct_messages/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @direct_message do |f| %>
+<%= form_for [@user, @dm_friend, @direct_message] do |f| %>
     <%= f.text_field :content %>
     <%= f.collection_select :dm_friend_id, User.all, :id, :username %>
     <%= f.hidden_field :user_id, :value => current_user.id %>
