--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <div class="topnav">
       <a><%= link_to "All Treasures", posts_path %></a>
-      <a><%= link_to "Post Treasure", new_post_path %></a>
+      <a><%= link_to "Post Treasure", new_user_post_path(current_user) %></a>
       <a><%= link_to "Hunters", users_path %></a>
       <% if session[:user_id] %>
         <a><%= link_to "Your Profile", user_path(session[:user_id]) %></a>
