--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,3 +19,5 @@
 <%= link_to "Show sorted users by currency.", alpha_path %>
 
 <%= link_to "Go to Friends.", user_dm_friends_path(@user) %>
+
+<%= link_to "View Comments.", user_comments_path(@user) %>
